# irishjobs

./: .gitignore  FINDINGS.md  NOTE.md  PLAN.md  README.md  occupations.csv  occupations.json  pyproject.toml  scores.json  update.py
pages/: accountants-tax-experts.md  actuaries-economists-statisticians-other-business-professionals.md  advertising-marketing-sales-directors.md  aircraft-pilots-ship-officers-air-traffic-controllers.md  animal-carers.md  architects-town-planners-architectural-technologists-surveyors.md  artistic-literary-media-associate-professionals.md  assemblers-routine-operatives.md  bar-staff.md  barristers-judges-solicitors-related-professionals.md  bricklayers-plasterers.md  business-sales-executives.md  butchers-fishmongers-bakers-etc.md  care-workers-home-carers-etc.md  carpenters-joiners.md  catering-bar-managers.md  chefs-cooks.md  chemical-biological-physical-scientists.md  chemical-related-process.md  childminders-etc.md  civil-engineers-construction-project-managers.md  cleaning.md  construction-operatives-elementary.md  construction-related-technicians.md  customer-service-occupations.md  educational-support-assistants.md  electrical-electronic-trades-etc.md  elementary-administrative.md  elementary-agriculture-occupations.md  environmental-conservation-specialists.md  farmers.md  financial-accounts-managers.md  financial-administrative-occupations.md  financial-analysts-insurance-underwriters.md  financial-managers-directors.md  food-drink-tobacco-operatives.md  government-administrative-occupations.md  hairdressers-beauticians-etc.md  (+62 more)
(+15 files in other folders)
